client-mesh/manifests/Gateway_client-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: client-ui
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - client-ui.apps.cluster-lv7gw.lv7gw.sandbox2409.opentlc.com
