client-mesh/manifests/VirtualService_client-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client-egress
spec:
  hosts:
  - server.server.svc.cluster.local
  gateways:
  - client-egress
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: server
        port:
          number: 443
      weight: 100
  - match:
    - gateways:
      - client-egress
      port: 443
    route:
    - destination:
        host: server.server.svc.cluster.local
        port:
          number: 443
      weight: 100
