client-mesh/manifests/VirtualService_client-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client-ui
spec:
  hosts:
  - "client-ui.apps.cluster-lv7gw.lv7gw.sandbox2409.opentlc.com"
  gateways:
  - client-ui
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3001
        host: client
